[package]
name = "average_hue"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.10"
hueclient = "0.4.1"
image = "0.24.1"
kmeans_colors = "0.5.0"
palette = "0.6.0"
uuid = { version = "0.8.2", features = ["v4"] }
rand = "0.8.5"